--- a/src/app.css
+++ b/src/app.css
@@ -6,4 +6,13 @@
   .debug, .debug * {
     box-shadow: 0 0 0 1px theme('colors.purple.500') inset;
   }
+
+  .nowrap {
+    white-space: nowrap;
+  }
+
+  .grid-center {
+    display: grid;
+    place-items: center;
+  }
 }
